laptop compose progress